homework/5.kubernetes-network/deployment-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres5
    spec:      
      containers:
      - image: postgres:10.13
        name: postgres5
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: pvc5
          mountPath: /var/lib/postgresql/data/
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: pvc5
        persistentVolumeClaim:
          claimName: pvc5
