homework/5.kubernetes-network/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-redmine
    spec:      
      containers:
      - image: redmine:4.1.1
        name: redmine 
        ports:
        - containerPort: 3000
          protocol: TCP        
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
